# RustNexus

./: Cargo.toml  Directory-Structure.md  README.md
nexus_app/: Cargo.toml
nexus_app/src/: main.rs
nexus_controller/: Cargo.toml
nexus_core/: Cargo.toml
nexus_core/src/: lib.rs
nexus_error/: Cargo.toml
nexus_model/: Cargo.toml
nexus_router/: Cargo.toml
src/: core.rs  lib.rs
src/controller/: controller.rs
src/core/: app.rs  error.rs  router.rs
src/router/: router.rs
